Envoy/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc_web
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/authentication.Authentication/"
                          route:
                            cluster: auth-service
                        - match:
                            prefix: "/patient.PatientService/"
                          route:
                            cluster: list-patient-service
                        - match:
                            prefix: "/risk.RiskService/"
                          route:
                              cluster: risk-app-service
                        - match:
                            prefix: "/patient.PatientDetailService/"
                          route:
                            cluster: patient-detail-service
                        - match:
                            prefix: "/scheduler.SchedulerService/"
                          route:
                            cluster: scheduler-service
                        - match:
                            prefix: "/api/scheduler"
                          route:
                            cluster: scheduler-flask-service
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message



                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  # example of using grpc
  clusters:
    - name: auth-service
      type: STRICT_DNS
      connect_timeout: 0.25s
      lb_policy: round_robin
      http2_protocol_options: { }
      load_assignment:
        cluster_name: auth-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal  # ⬅️ CHANGED from auth-service.default.svc.cluster.local
                      port_value: 30051  # ⬅️ CHANGED from 50051 to use NodePort


    - name: list-patient-service
      type: STRICT_DNS
      connect_timeout: 0.25s
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: list-patient-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal # changed from list-patient-service
                      port_value: 30052 # changed from 50052

    - name: patient-detail-service
      type: STRICT_DNS
      connect_timeout: 0.25s
      lb_policy: round_robin
      http2_protocol_options: { }
      load_assignment:
        cluster_name: patient-detail-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: patient-detail-service
                      port_value: 50053


    - name: risk-app-service
      type: STRICT_DNS
      connect_timeout: 0.25s
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: risk-app-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: risk-app-service
                      port_value: 50054

    - name: scheduler-service
      type: STRICT_DNS
      connect_timeout: 0.25s
      lb_policy: round_robin
      http2_protocol_options: { }
      load_assignment:
        cluster_name: scheduler-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: scheduler-service
                      port_value: 50055

    - name: scheduler-flask-service
      type: logical_dns
      connect_timeout: 0.25s
      lb_policy: round_robin
      load_assignment:
        cluster_name: scheduler-flask-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: scheduler-service
                      port_value: 5005
